--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "build/index.js",
     "scripts": {
-        "build": "npx parcel build src/index.ts"
+        "build": "tsc"
     },
     "prettier": "@knfcz/prettierrc",
     "keywords": [
@@ -16,12 +16,10 @@
     "license": "ISC",
     "devDependencies": {
         "@knfcz/prettierrc": "^1.0.1",
-        "@types/express": "^4.17.13",
-        "parcel": "^2.7.0",
         "prettier": "^2.7.1",
         "typescript": "^4.7.4"
     },
-    "dependencies": {
+    "peerDependencies": {
         "express": "^5.0.0-beta.1"
     }
 }
