--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,11 @@
 {
-  "compilerOptions": {
-    "lib": ["es2021"],
-    "allowJs": true,
-    "declaration": true,
-    "module": "commonjs",
-    "outDir": "build/",
-    "strict": true,
-    "target": "es2016",
-    "experimentalDecorators": true
-  },
+    "compilerOptions": {
+        "allowJs": true,
+        "declaration": true,
+        "module": "commonjs",
+        "moduleResolution": "Node",
+        "outDir": "lib/",
+        "strict": true,
+        "target": "es2016"
+    }
 }
