--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "@knfcz/http-errors",
     "version": "0.1.1",
     "description": "",
-    "main": "build/index.js",
+    "main": "lib/index.js",
     "scripts": {
         "build": "tsc"
     },
