--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
         "typescript": "^4.7.4"
     },
     "peerDependencies": {
-        "express": "^5.0.0-beta.1"
+        "express": "^4.18.0"
     }
 }
